drkns 22.08.2016 22:01:40 +0200

1. GCC 6.

drkns 22.08.2016 11:43:23 +0200

1. Приведены в порядок шапки во всех cpp/hpp.

2. Добавлен скрипт для валидации п. 1.

drkns 20.08.2016 14:01:57 +0200 - build 4764

1. Уточнение 4757.1.

drkns 19.08.2016 09:45:27 +0200 - build 4763

1. Уточнение 4762.

drkns 18.08.2016 22:11:54 +0200 - build 4762

1. Продолжение 0003274.

drkns 18.08.2016 21:15:20 +0200 - build 4761

1. Уточнение 4760.1.

drkns 18.08.2016 02:34:26 +0200 - build 4760

1. 0003274: В полях ввода комбинация клавиш переключения языка Ctrl-Shift ошибочно фиксирует начало изменения поля
   Обработка FEDITLINE_CLEARFLAG частично вынесена в EditControl.

2. Прочий мелкий рефакторинг.

svs 17.08.2016 20:23:57 +0300 - build 4759

1. SQLite 3.14.1

drkns 15.08.2016 09:23:14 +0200 - build 4758

1. Более параноидальные опции для GCC.

drkns 14.08.2016 15:28:56 +0200 - build 4757

1. Рефакторинг всего, связанного с кодировками.

2. -flto для GCC. Far.exe внезапно похудел аж на ~750 K.

drkns 13.08.2016 17:07:34 +0200 - build 4756

1. Ещё одно уточнение 4747.

svs 09.08.2016 10:31:09 +0300 - build 4755

1. SQLite 3.14.0

drkns 08.08.2016 23:38:23 +0200 - build 4754

1. Рефакторинг.

drkns 07.08.2016 21:59:50 +0200 - build 4753

1. После 4747 не работали адаптеры.

drkns 07.08.2016 15:01:50 +0200 - build 4752

1. Пара оптимизаций работы с буфером обмена.

drkns 06.08.2016 14:56:47 +0200 - build 4751

1. Уточнение обработки некорректных hex-строк в диалогах.

2. В одном из предыдущих билдов погнулась диагностика исключений.

drkns 04.08.2016 22:16:44 +0200 - build 4750

1. Уточнение 4748.

drkns 03.08.2016 23:30:06 +0200 - build 4749

1. Вместо %1, %2, %3... в коде и языковых файлах теперь {0}, {1}, {2}...
   Если у вас были свои lng - в них надо сделать замену первого на второе.

drkns 02.08.2016 22:18:59 +0200 - build 4748

1. Рефакторинг.

drkns 30.07.2016 21:27:07 +0200 - build 4747

1. Рефакторинг.

zg 30.07.2016 20:43:15 +0200 - build 4746
